apps/frontend/src/pages/Surveys/Tables/dialogs/resultVisualizationDialog.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.result-visualization {
  select.sa-question__select {
    border-radius: 0.4rem;
    color: var(--background) !important;
    background-color: var(--accent) !important;
  }

  span.sa-toolbar__button {
    border-radius: 0.4rem;
    padding: 0.625rem 0.8rem;
    background-color: transparent;
    color: var(--ring);
    border: solid 1px var(--background);

    &:hover {
      background-color: var(--muted-light);
    }
  }

  select {
    option:checked {
      font-weight: bold;
      color: var(--primary) !important;
      &:hover {
        color: var(--primary-foreground) !important;
      }
    }
  }

  .sa-question__title.sa-question__title--draggable {
    &:after {
      background-image: url("data:image/svg+xml,%3Csvg version=%271.1%27 xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27%3E%3Cg%3E%3Cpolygon style=%27fill: %23d1d5db%27 points=%2713,5 12,6 13,7 9,7 9,3 10,4 11,3 8,0 5,3 6,4 7,3 7,7 3,7 4,6 3,5 0,8 3,11 4,10 3,9 7,9 7,13 6,12 5,13 8,16 11,13 10,12 9,13 9,9 13,9 12,10 13,11 16,8 %27/%3E%3C/g%3E%3C/svg%3E");
    }
    &:hover,
    &:focus {
      &:after {
        background-image: url("data:image/svg+xml,%3Csvg version=%271.1%27 xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27%3E%3Cg%3E%3Cpolygon style=%27fill: %230281c7%27 points=%2713,5 12,6 13,7 9,7 9,3 10,4 11,3 8,0 5,3 6,4 7,3 7,7 3,7 4,6 3,5 0,8 3,11 4,10 3,9 7,9 7,13 6,12 5,13 8,16 11,13 10,12 9,13 9,9 13,9 12,10 13,11 16,8 %27/%3E%3C/g%3E%3C/svg%3E");
      }
    }
  }
  .sa-text-table {
    color: var(--input) !important;
    background: transparent !important;
  }
  .sa-text-table__cell {
    color: var(--input) !important;
    background: transparent !important;
    border: solid 1px var(--input) !important;
  }

  /* Fix tables background color: Remove the white backgrounds */
  .sa-question,
  .sa-question__title {
    background: transparent !important;
    color: var(--background) !important;
  }
  .sa-question__select {
    color: var(--input) !important;
    background-color: var(--accent) !important;
  }
  .sa-question__select:hover,
  .sa-question__select:focus {
    color: var(--background) !important;
  }

  .sa-question__content {
    background: transparent !important;
  }

  /* FIX SVG PLOT STYLING */
  .main-svg,
  .svg-container,
  .user-select-none {
    background: transparent !important;

    text {
      color: var(--background) !important;
      fill: var(--background) !important;
    }
  }
  .sa-visualizer__content {
    color: var(--muted-foreground);
  }
  .sa-text-table__container {
    min-height: 80px;
  }
  .sa-visualizer__footer-title {
    color: var(--primary-foreground);
  }
  .sa-toolbar__button {
    fill: var(--background) !important;
    color: var(--background) !important;
    border-color: var(--background) !important;
  }
  .sa-toolbar__button:hover {
    background-color: var(--accent-light) !important;
  }

  .sa-question__select-wrapper::before {
    display: none;
  }

  .modebar:hover,
  .modebar--hover {
    border-radius: 0.4rem;
    background: var(--muted-light) !important;
  }

  .modebar-btn .icon path {
    fill: var(--background) !important;
  }
  .modebar-btn .icon path:hover,
  .modebar-btn .icon path:focus {
    fill: var(--primary) !important;
  }

  .modebar-container,
  .modebar,
  .modebar-group {
    background: transparent !important;
  }

  .modebar-container:hover,
  .modebar-container--hover {
    border-radius: 0.4rem;
    background: var(--muted-light) !important;
  }

  .modebar-btn[data-val="zoom"],
  .modebar-btn[data-val="reset"],
  .modebar-btn[data-val="pan"],
  .modebar-btn[data-val="lasso"],
  .modebar-btn[data-val="select"] {
    display: none;
  }
}

